--- a/1 Preprocess/Merge Data/1.1.1 IM - Create Dataset.ipynb
+++ b/1 Preprocess/Merge Data/1.1.1 IM - Create Dataset.ipynb
@@ -2,14 +2,15 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: statsmodels in c:\\users\\steve\\onedrive\\1. baiutek\\project-optic4\\.venv\\lib\\site-packages (0.14.1)\n",
+            "Requirement already satisfied: statsmodels in c:\\users\\steve\\onedrive\\1. baiutek\\project-optic4\\.venv\\lib\\site-packages (0.14.1)Note: you may need to restart the kernel to use updated packages.\n",
+            "\n",
             "Requirement already satisfied: numpy<2,>=1.18 in c:\\users\\steve\\onedrive\\1. baiutek\\project-optic4\\.venv\\lib\\site-packages (from statsmodels) (1.26.2)\n",
             "Requirement already satisfied: scipy!=1.9.2,>=1.4 in c:\\users\\steve\\onedrive\\1. baiutek\\project-optic4\\.venv\\lib\\site-packages (from statsmodels) (1.11.4)\n",
             "Requirement already satisfied: pandas!=2.1.0,>=1.0 in c:\\users\\steve\\onedrive\\1. baiutek\\project-optic4\\.venv\\lib\\site-packages (from statsmodels) (2.1.4)\n",
@@ -18,8 +19,7 @@
             "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\steve\\onedrive\\1. baiutek\\project-optic4\\.venv\\lib\\site-packages (from pandas!=2.1.0,>=1.0->statsmodels) (2.8.2)\n",
             "Requirement already satisfied: pytz>=2020.1 in c:\\users\\steve\\onedrive\\1. baiutek\\project-optic4\\.venv\\lib\\site-packages (from pandas!=2.1.0,>=1.0->statsmodels) (2023.3.post1)\n",
             "Requirement already satisfied: tzdata>=2022.1 in c:\\users\\steve\\onedrive\\1. baiutek\\project-optic4\\.venv\\lib\\site-packages (from pandas!=2.1.0,>=1.0->statsmodels) (2023.3)\n",
-            "Requirement already satisfied: six in c:\\users\\steve\\onedrive\\1. baiutek\\project-optic4\\.venv\\lib\\site-packages (from patsy>=0.5.4->statsmodels) (1.16.0)\n",
-            "Note: you may need to restart the kernel to use updated packages.\n"
+            "Requirement already satisfied: six in c:\\users\\steve\\onedrive\\1. baiutek\\project-optic4\\.venv\\lib\\site-packages (from patsy>=0.5.4->statsmodels) (1.16.0)\n"
           ]
         }
       ],
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -62,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -130,7 +130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -151,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -162,7 +162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -183,7 +183,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -208,7 +208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -229,7 +229,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -257,7 +257,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -276,7 +276,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -309,7 +309,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -331,7 +331,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -343,7 +343,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
@@ -357,7 +357,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\steve\\AppData\\Local\\Temp\\ipykernel_18284\\1964144134.py:78: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+            "C:\\Users\\steve\\AppData\\Local\\Temp\\ipykernel_5160\\1964144134.py:78: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
             "  results = pd.concat([results, iteration_results_df], ignore_index=True)\n"
           ]
         }
@@ -456,7 +456,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -466,7 +466,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -485,34 +485,6 @@
         "df_part1.to_csv('contData_all_Avg_1o2.csv', index=False)\n",
         "df_part2.to_csv('contData_all_Avg_2o2.csv', index=False)\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
