--- a/1 Preprocess/Merge Data/1.1.1 IM - Create Dataset.ipynb
+++ b/1 Preprocess/Merge Data/1.1.1 IM - Create Dataset.ipynb
@@ -2,15 +2,14 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: statsmodels in c:\\users\\steve\\onedrive\\1. baiutek\\project-optic4\\.venv\\lib\\site-packages (0.14.1)Note: you may need to restart the kernel to use updated packages.\n",
-            "\n",
+            "Requirement already satisfied: statsmodels in c:\\users\\steve\\onedrive\\1. baiutek\\project-optic4\\.venv\\lib\\site-packages (0.14.1)\n",
             "Requirement already satisfied: numpy<2,>=1.18 in c:\\users\\steve\\onedrive\\1. baiutek\\project-optic4\\.venv\\lib\\site-packages (from statsmodels) (1.26.2)\n",
             "Requirement already satisfied: scipy!=1.9.2,>=1.4 in c:\\users\\steve\\onedrive\\1. baiutek\\project-optic4\\.venv\\lib\\site-packages (from statsmodels) (1.11.4)\n",
             "Requirement already satisfied: pandas!=2.1.0,>=1.0 in c:\\users\\steve\\onedrive\\1. baiutek\\project-optic4\\.venv\\lib\\site-packages (from statsmodels) (2.1.4)\n",
@@ -19,7 +18,8 @@
             "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\steve\\onedrive\\1. baiutek\\project-optic4\\.venv\\lib\\site-packages (from pandas!=2.1.0,>=1.0->statsmodels) (2.8.2)\n",
             "Requirement already satisfied: pytz>=2020.1 in c:\\users\\steve\\onedrive\\1. baiutek\\project-optic4\\.venv\\lib\\site-packages (from pandas!=2.1.0,>=1.0->statsmodels) (2023.3.post1)\n",
             "Requirement already satisfied: tzdata>=2022.1 in c:\\users\\steve\\onedrive\\1. baiutek\\project-optic4\\.venv\\lib\\site-packages (from pandas!=2.1.0,>=1.0->statsmodels) (2023.3)\n",
-            "Requirement already satisfied: six in c:\\users\\steve\\onedrive\\1. baiutek\\project-optic4\\.venv\\lib\\site-packages (from patsy>=0.5.4->statsmodels) (1.16.0)\n"
+            "Requirement already satisfied: six in c:\\users\\steve\\onedrive\\1. baiutek\\project-optic4\\.venv\\lib\\site-packages (from patsy>=0.5.4->statsmodels) (1.16.0)\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
           ]
         }
       ],
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 21,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 22,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -62,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 23,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -130,7 +130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [
         {
@@ -151,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -162,7 +162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [
         {
@@ -183,7 +183,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [
         {
@@ -208,7 +208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -229,7 +229,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 29,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -257,7 +257,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -276,7 +276,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -309,7 +309,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [
         {
@@ -331,7 +331,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 33,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -343,22 +343,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Iteration: 1\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "C:\\Users\\steve\\AppData\\Local\\Temp\\ipykernel_5160\\1964144134.py:78: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
-            "  results = pd.concat([results, iteration_results_df], ignore_index=True)\n"
+          "ename": "KeyError",
+          "evalue": "\"['Date'] not found in axis\"",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[34], line 86\u001b[0m\n\u001b[0;32m     83\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m results, all_combined_dfs  \u001b[38;5;66;03m# Return both results and the list of combined_df_all\u001b[39;00m\n\u001b[0;32m     85\u001b[0m \u001b[38;5;66;03m# Call the function to process and evaluate the data\u001b[39;00m\n\u001b[1;32m---> 86\u001b[0m model_results, all_combined_dfs \u001b[38;5;241m=\u001b[39m \u001b[43mprocess_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+            "Cell \u001b[1;32mIn[34], line 53\u001b[0m, in \u001b[0;36mprocess_data\u001b[1;34m()\u001b[0m\n\u001b[0;32m     50\u001b[0m all_combined_dfs\u001b[38;5;241m.\u001b[39mappend(combined_df_all)\n\u001b[0;32m     52\u001b[0m \u001b[38;5;66;03m# Splitting into train and test\u001b[39;00m\n\u001b[1;32m---> 53\u001b[0m X \u001b[38;5;241m=\u001b[39m \u001b[43mcombined_df_all\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdrop\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mButanol\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mDate\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     54\u001b[0m y \u001b[38;5;241m=\u001b[39m combined_df_all[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mButanol\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m     55\u001b[0m X_train, X_test, y_train, y_test \u001b[38;5;241m=\u001b[39m train_test_split(X, y, test_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.2\u001b[39m, random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m)\n",
+            "File \u001b[1;32mc:\\Users\\steve\\OneDrive\\1. BAIUTEK\\Project-OptiC4\\.venv\\Lib\\site-packages\\pandas\\core\\frame.py:5344\u001b[0m, in \u001b[0;36mDataFrame.drop\u001b[1;34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[0m\n\u001b[0;32m   5196\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdrop\u001b[39m(\n\u001b[0;32m   5197\u001b[0m     \u001b[38;5;28mself\u001b[39m,\n\u001b[0;32m   5198\u001b[0m     labels: IndexLabel \u001b[38;5;241m|\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   5205\u001b[0m     errors: IgnoreRaise \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraise\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m   5206\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m DataFrame \u001b[38;5;241m|\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m   5207\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m   5208\u001b[0m \u001b[38;5;124;03m    Drop specified labels from rows or columns.\u001b[39;00m\n\u001b[0;32m   5209\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   5342\u001b[0m \u001b[38;5;124;03m            weight  1.0     0.8\u001b[39;00m\n\u001b[0;32m   5343\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m-> 5344\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdrop\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m   5345\u001b[0m \u001b[43m        \u001b[49m\u001b[43mlabels\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mlabels\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   5346\u001b[0m \u001b[43m        \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   5347\u001b[0m \u001b[43m        \u001b[49m\u001b[43mindex\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mindex\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   5348\u001b[0m \u001b[43m        \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   5349\u001b[0m \u001b[43m        \u001b[49m\u001b[43mlevel\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mlevel\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   5350\u001b[0m \u001b[43m        \u001b[49m\u001b[43minplace\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43minplace\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   5351\u001b[0m \u001b[43m        \u001b[49m\u001b[43merrors\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43merrors\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   5352\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
+            "File \u001b[1;32mc:\\Users\\steve\\OneDrive\\1. BAIUTEK\\Project-OptiC4\\.venv\\Lib\\site-packages\\pandas\\core\\generic.py:4711\u001b[0m, in \u001b[0;36mNDFrame.drop\u001b[1;34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[0m\n\u001b[0;32m   4709\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m axis, labels \u001b[38;5;129;01min\u001b[39;00m axes\u001b[38;5;241m.\u001b[39mitems():\n\u001b[0;32m   4710\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m labels \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m-> 4711\u001b[0m         obj \u001b[38;5;241m=\u001b[39m \u001b[43mobj\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_drop_axis\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlabels\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlevel\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mlevel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43merrors\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43merrors\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   4713\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m inplace:\n\u001b[0;32m   4714\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_update_inplace(obj)\n",
+            "File \u001b[1;32mc:\\Users\\steve\\OneDrive\\1. BAIUTEK\\Project-OptiC4\\.venv\\Lib\\site-packages\\pandas\\core\\generic.py:4753\u001b[0m, in \u001b[0;36mNDFrame._drop_axis\u001b[1;34m(self, labels, axis, level, errors, only_slice)\u001b[0m\n\u001b[0;32m   4751\u001b[0m         new_axis \u001b[38;5;241m=\u001b[39m axis\u001b[38;5;241m.\u001b[39mdrop(labels, level\u001b[38;5;241m=\u001b[39mlevel, errors\u001b[38;5;241m=\u001b[39merrors)\n\u001b[0;32m   4752\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m-> 4753\u001b[0m         new_axis \u001b[38;5;241m=\u001b[39m \u001b[43maxis\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdrop\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlabels\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43merrors\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43merrors\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   4754\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m axis\u001b[38;5;241m.\u001b[39mget_indexer(new_axis)\n\u001b[0;32m   4756\u001b[0m \u001b[38;5;66;03m# Case for non-unique axis\u001b[39;00m\n\u001b[0;32m   4757\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+            "File \u001b[1;32mc:\\Users\\steve\\OneDrive\\1. BAIUTEK\\Project-OptiC4\\.venv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:7000\u001b[0m, in \u001b[0;36mIndex.drop\u001b[1;34m(self, labels, errors)\u001b[0m\n\u001b[0;32m   6998\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m mask\u001b[38;5;241m.\u001b[39many():\n\u001b[0;32m   6999\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m errors \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mignore\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m-> 7000\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlabels[mask]\u001b[38;5;241m.\u001b[39mtolist()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m not found in axis\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   7001\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m indexer[\u001b[38;5;241m~\u001b[39mmask]\n\u001b[0;32m   7002\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdelete(indexer)\n",
+            "\u001b[1;31mKeyError\u001b[0m: \"['Date'] not found in axis\""
           ]
         }
       ],
@@ -415,7 +416,7 @@
         "                        all_combined_dfs.append(combined_df_all)\n",
         "\n",
         "                        # Splitting into train and test\n",
-        "                        X = combined_df_all.drop('Butanol', axis=1)\n",
+        "                        X = combined_df_all.drop(['Butanol', 'Date'], axis=1)\n",
         "                        y = combined_df_all['Butanol']\n",
         "                        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
         "\n",
@@ -441,9 +442,6 @@
         "                        \n",
         "                        # Concatenate it with the existing DataFrame, wrap iteration_results_df in a list\n",
         "                        results = pd.concat([results, iteration_results_df], ignore_index=True)\n",
-        "                        # results = pd.concat(iteration_results_df, ignore_index=True)\n",
-        "                        \n",
-        "                        # results = pd.concat(iteration_results, ignore_index=True)\n",
         "\n",
         "                        # Print only the iteration count\n",
         "                        print(f\"Iteration: {iteration_count}\")\n",
@@ -456,7 +454,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -466,11 +464,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
         "combined_df_all = pd.concat(all_combined_dfs)\n",
+        "\n",
+        "combined_df_all.to_csv('all_combined_dfs.csv', index=False)\n",
         "\n",
         "# Assuming combined_df_all is your DataFrame\n",
         "\n",
