--- a/1 Preprocess/Continuous Data/1.0.0 Preprocess.ipynb
+++ b/1 Preprocess/Continuous Data/1.0.0 Preprocess.ipynb
@@ -12,7 +12,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\steve\\AppData\\Local\\Temp\\ipykernel_59744\\753047149.py:1: DeprecationWarning: \n",
+            "C:\\Users\\steve\\AppData\\Local\\Temp\\ipykernel_17156\\753047149.py:1: DeprecationWarning: \n",
             "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
             "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
             "but was not found to be installed on your system.\n",
@@ -3049,7 +3049,7 @@
         "# https://raw.githubusercontent.com/saust1/Project-OptiC4/main/1%20Preprocess/Continuous%20Data/contData_all.csv\n",
         "\n",
         "# Save DataFrame to CSV file in the same directory as the Jupyter Notebook\n",
-        "df_CD.to_csv('https://raw.githubusercontent.com/saust1/Project-OptiC4/main/1%20Preprocess/Continuous%20Data/contData_all.csv', index=False)"
+        "df_CD.to_csv(r'C:\\Users\\steve\\OneDrive\\1. BAIUTEK\\Project-OptiC4\\1 Preprocess\\Continuous Data\\contData_all.csv', index=False)"
       ]
     },
     {
