--- a/1 Preprocess/Merge Data/1.1.0 Iterative Merger.ipynb
+++ b/1 Preprocess/Merge Data/1.1.0 Iterative Merger.ipynb
@@ -7,7 +7,22 @@
         "tags": [],
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "C:\\Users\\steve\\AppData\\Local\\Temp\\ipykernel_58564\\1304120184.py:1: DeprecationWarning: \n",
+            "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+            "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+            "but was not found to be installed on your system.\n",
+            "If this would cause problems for you,\n",
+            "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+            "        \n",
+            "  import pandas as pd\n"
+          ]
+        }
+      ],
       "source": [
         "import pandas as pd\n",
         "# Set max columns to display\n",
@@ -386,7 +401,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -709,8 +724,8 @@
         "                        }\n",
         "                        # 1 results = results.append(iteration_results, ignore_index=True)?\n",
         "                        # 2 results = pd.concat([results, iteration_results], ignore_index=True)\n",
-        "                        iteration_results_df = pd.DataFrame([iteration_results])\n",
-        "                        results = pd.concat([results, iteration_results_df], ignore_index=True)\n",
+        "                        # iteration_results_df = pd.DataFrame([iteration_results])\n",
+        "                        results = pd.concat([results], ignore_index=True) #, iteration_results_df\n",
         "\n",
         "\n",
         "\n",
@@ -785,7 +800,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.9"
+      "version": "3.11.7"
     }
   },
   "nbformat": 4,
