Organize files and clean up names

--- a/1 Preprocess/Merge Data/1.1.0 Iterative Merger.ipynb
+++ b/1 Preprocess/Merge Data/1.1.0 Iterative Merger.ipynb
@@ -740,12 +740,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Save DataFrame to CSV file in the same directory as the Jupyter Notebook\n",
-        "model_results.to_csv('model_results1.csv', index=False)"
+        "model_results.to_csv('model_results.csv', index=False)"
       ]
     },
     {
