--- a/1 Preprocess/Continuous Data/1.1.0 - RangeLimits.ipynb
+++ b/1 Preprocess/Continuous Data/1.1.0 - RangeLimits.ipynb
@@ -12,7 +12,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\steve\\AppData\\Local\\Temp\\ipykernel_51724\\3402816738.py:1: DeprecationWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_27064\\3402816738.py:1: DeprecationWarning: \n",
             "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
             "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
             "but was not found to be installed on your system.\n",
@@ -33,21 +33,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Importing CSV files\n",
         "\n",
         "\n",
-        "df_adjust_Limits = pd.read_csv('https://raw.githubusercontent.com/saust1/Project-OptiC4/main/1%20Preprocess/Continuous%20Data/contData_all.csv')\n",
+        "# df_adjust_Limits = pd.read_csv('https://raw.githubusercontent.com/saust1/Project-OptiC4/main/1%20Preprocess/Continuous%20Data/contData_all.csv')\n",
         "\n",
-        "df_adjustments = pd.read_csv('https://raw.githubusercontent.com/saust1/Project-OptiC4/main/CSV/PVs/adjust_limits.csv')\n"
+        "# df_adjustments = pd.read_csv('https://raw.githubusercontent.com/saust1/Project-OptiC4/main/CSV/PVs/adjust_limits.csv')\n",
+        "\n",
+        "\n",
+        "df_adjust_Limits = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\1 Preprocess\\Continuous Data\\contData_all.csv\")\n",
+        "\n",
+        "df_adjustments = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\adjust_limits.csv\")\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -65,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 9,
       "metadata": {
         "trusted": true
       },
@@ -748,7 +753,7 @@
               "max      695.788000     40.67650  "
             ]
           },
-          "execution_count": 4,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -765,7 +770,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -960,7 +965,7 @@
               "1      350      300      200      200  "
             ]
           },
-          "execution_count": 5,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -974,7 +979,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1001,7 +1006,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -1041,7 +1046,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -1130,7 +1135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -1223,7 +1228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1234,12 +1239,15 @@
         "\n",
         "\n",
         "# Save DataFrame to CSV file in the same directory as the Jupyter Notebook\n",
-        "df_adjust_Limits.to_csv(r'C:\\Users\\steve\\OneDrive\\1. BAIUTEK\\Project-OptiC4\\1 Preprocess\\Continuous Data\\adjusted_Limits.csv', index=False)"
+        "# df_adjust_Limits.to_csv(r'C:\\Users\\steve\\OneDrive\\1. BAIUTEK\\Project-OptiC4\\1 Preprocess\\Continuous Data\\adjusted_Limits.csv', index=False)\n",
+        "\n",
+        "#bordeCode\n",
+        "df_adjust_Limits.to_csv(r'C:\\Users\\austinsh\\Project-OptiC4\\1 Preprocess\\Continuous Data\\adjusted_Limits.csv', index=False)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -1920,7 +1928,7 @@
               "max      298.762000     16.987900  "
             ]
           },
-          "execution_count": 11,
+          "execution_count": 17,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1932,7 +1940,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1956,7 +1964,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.7"
+      "version": "3.12.1"
     }
   },
   "nbformat": 4,
