Working on bordeCode iterative merger

--- a/1 Preprocess/Merge Data/1.1.0 Iterative Merger.ipynb
+++ b/1 Preprocess/Merge Data/1.1.0 Iterative Merger.ipynb
@@ -240,10 +240,10 @@
         }
       ],
       "source": [
-        "%pip install scikit-learn\n",
-        "%pip install matplotlib\n",
-        "%pip install scipy\n",
-        "%pip install statsmodels"
+        "# %pip install scikit-learn\n",
+        "# %pip install matplotlib\n",
+        "# %pip install scipy\n",
+        "# %pip install statsmodels"
       ]
     },
     {
@@ -288,10 +288,15 @@
       "outputs": [],
       "source": [
         "\n",
-        "# Importing CSV files\n",
-        "df_CDunit = pd.read_csv('https://raw.githubusercontent.com/saust1/Project-OptiC4/main/1%20Preprocess/Continuous%20Data/cont_554Data_clean.csv')\n",
-        "df_AlCon = pd.read_csv('https://raw.githubusercontent.com/saust1/Project-OptiC4/main/1%20Preprocess/Continuous%20Data/cont_425Data_clean.csv')\n",
-        "df_FB554 = pd.read_csv('https://raw.githubusercontent.com/saust1/Project-OptiC4/main/1%20Preprocess/Continuous%20Data/cont_unitData_clean.csv')\n"
+        "# # Importing CSV files\n",
+        "# df_CDunit = pd.read_csv('https://raw.githubusercontent.com/saust1/Project-OptiC4/main/1%20Preprocess/Continuous%20Data/cont_554Data_clean.csv')\n",
+        "# df_AlCon = pd.read_csv('https://raw.githubusercontent.com/saust1/Project-OptiC4/main/1%20Preprocess/Continuous%20Data/cont_425Data_clean.csv')\n",
+        "# df_FB554 = pd.read_csv('https://raw.githubusercontent.com/saust1/Project-OptiC4/main/1%20Preprocess/Continuous%20Data/cont_unitData_clean.csv')\n",
+        "\n",
+        "# bordeCode directory\n",
+        "# df_CDunit = pd.read_csv('https://raw.githubusercontent.com/saust1/Project-OptiC4/main/1%20Preprocess/Continuous%20Data/cont_554Data_clean.csv')\n",
+        "# df_AlCon = pd.read_csv('https://raw.githubusercontent.com/saust1/Project-OptiC4/main/1%20Preprocess/Continuous%20Data/cont_425Data_clean.csv')\n",
+        "# df_FB554 = pd.read_csv('https://raw.githubusercontent.com/saust1/Project-OptiC4/main/1%20Preprocess/Continuous%20Data/cont_unitData_clean.csv')"
       ]
     },
     {
