-Iterative scan for best adjR2 -Rename CSV output to match

--- a/1 Preprocess/Merge Data/1.1.0 Iterative Merger.ipynb
+++ b/1 Preprocess/Merge Data/1.1.0 Iterative Merger.ipynb
@@ -1502,7 +1502,7 @@
         "# Save DataFrame to CSV file in the same directory as the Jupyter Notebook\n",
         "# model_results.to_csv('model_results.csv', index=False)\n",
         "\n",
-        "model_results.to_csv(r'C:\\Users\\austinsh\\Project-OptiC4\\1 Preprocess\\Merge Data\\model_results1.csv', index=False)\n"
+        "model_results.to_csv(r'C:\\Users\\austinsh\\Project-OptiC4\\1 Preprocess\\Merge Data\\iterative_adjR2_scan.csv', index=False)\n"
       ]
     }
   ],
