Updated Range Change to all CD attributes

--- a/II Data/2 Preprocessing/Continuous Data/1.0.0 Preprocess.ipynb
+++ b/II Data/2 Preprocessing/Continuous Data/1.0.0 Preprocess.ipynb
@@ -12,7 +12,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_10136\\753047149.py:1: DeprecationWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_32708\\753047149.py:1: DeprecationWarning: \n",
             "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
             "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
             "but was not found to be installed on your system.\n",
@@ -145,65 +145,65 @@
         "# ##############################                           IMPORT DATA                      ##############################      \n",
         "# ##############################                                                            ##############################\n",
         "# ########################################################################################################################\n",
-        "ABB1_split_1 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\ABB1_split_1.csv\")\n",
-        "ABB1_split_2 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\ABB1_split_2.csv\")\n",
-        "ABB1_1 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\ABB1_1.csv\")\n",
-        "ABB1_2 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\ABB1_2.csv\")\n",
-        "ABB1_4 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\ABB1_4.csv\")\n",
-        "ABB1_6 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\ABB1_6.csv\")\n",
-        "ABB2_split_1 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\ABB2_split_1.csv\")\n",
-        "ABB2_split_2 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\ABB2_split_2.csv\")\n",
-        "ABB2_1 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\ABB2_1.csv\")\n",
-        "ABB2_2 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\ABB2_2.csv\")\n",
-        "ABB2_4 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\ABB2_4.csv\")\n",
-        "ABB2_5 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\ABB2_5.csv\")\n",
-        "ABB3 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\ABB3.csv\")\n",
-        "ABB3_1 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\ABB3_1.csv\")\n",
-        "ABB3_2 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\ABB3_2.csv\")\n",
-        "ABB4 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\ABB4.csv\")\n",
-        "ABB51 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\ABB51.csv\")\n",
-        "ABB55 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\ABB55.csv\")\n",
-        "ABBp = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\ABBp.csv\")\n",
+        "ABB1_split_1 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\ABB1_split_1.csv\")\n",
+        "ABB1_split_2 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\ABB1_split_2.csv\")\n",
+        "ABB1_1 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\ABB1_1.csv\")\n",
+        "ABB1_2 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\ABB1_2.csv\")\n",
+        "ABB1_4 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\ABB1_4.csv\")\n",
+        "ABB1_6 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\ABB1_6.csv\")\n",
+        "ABB2_split_1 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\ABB2_split_1.csv\")\n",
+        "ABB2_split_2 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\ABB2_split_2.csv\")\n",
+        "ABB2_1 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\ABB2_1.csv\")\n",
+        "ABB2_2 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\ABB2_2.csv\")\n",
+        "ABB2_4 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\ABB2_4.csv\")\n",
+        "ABB2_5 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\ABB2_5.csv\")\n",
+        "ABB3 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\ABB3.csv\")\n",
+        "ABB3_1 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\ABB3_1.csv\")\n",
+        "ABB3_2 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\ABB3_2.csv\")\n",
+        "ABB4 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\ABB4.csv\")\n",
+        "ABB51 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\ABB51.csv\")\n",
+        "ABB55 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\ABB55.csv\")\n",
+        "ABBp = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\ABBp.csv\")\n",
         "\n",
-        "AlFlow1 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\AlFlow1.csv\")\n",
+        "AlFlow1 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\AlFlow1.csv\")\n",
         "\n",
-        "DeltaV = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\DeltaV.csv\")\n",
-        "DeltaV1 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\DeltaV1.csv\")\n",
-        "DeltaV2 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\DeltaV2.csv\")\n",
-        "DeltaV4 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\DeltaV4.csv\")\n",
-        "DeltaV5 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\DeltaV5.csv\")\n",
+        "DeltaV = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\DeltaV.csv\")\n",
+        "DeltaV1 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\DeltaV1.csv\")\n",
+        "DeltaV2 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\DeltaV2.csv\")\n",
+        "DeltaV4 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\DeltaV4.csv\")\n",
+        "DeltaV5 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\DeltaV5.csv\")\n",
         "\n",
-        "DeltaVp = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\DeltaVp.csv\")\n",
+        "DeltaVp = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\DeltaVp.csv\")\n",
         "\n",
-        "DeltaVR_split_1 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\DeltaVR_split_1.csv\")\n",
-        "DeltaVR_split_2 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\DeltaVR_split_2.csv\")\n",
-        "\n",
-        "\n",
-        "FC55555_ABB = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\FC55555_ABB.csv\")\n",
-        "FC55555_DeltaV = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\FC55555_DeltaV.csv\")\n",
-        "\n",
-        "LIMS = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\LIM - 554 - Interpolated.csv\")\n",
-        "LIMS1 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\LIMS Actuals\\LIMS1.csv\")\n",
-        "LIMS2 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\LIMS Actuals\\LIMS2.csv\")\n",
-        "LIMS3 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\LIMS Actuals\\LIMS3.csv\")\n",
-        "LIMS4 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\LIMS Actuals\\LIMS4.csv\")\n",
+        "DeltaVR_split_1 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\DeltaVR_split_1.csv\")\n",
+        "DeltaVR_split_2 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\DeltaVR_split_2.csv\")\n",
         "\n",
         "\n",
-        "rC4f_DeltaV = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\rC4f_DeltaV.csv\")\n",
+        "FC55555_ABB = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\FC55555_ABB.csv\")\n",
+        "FC55555_DeltaV = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\FC55555_DeltaV.csv\")\n",
+        "\n",
+        "LIMS = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\LIM - 554 - Interpolated.csv\")\n",
+        "LIMS1 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\LIMS Actuals\\LIMS1.csv\")\n",
+        "LIMS2 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\LIMS Actuals\\LIMS2.csv\")\n",
+        "LIMS3 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\LIMS Actuals\\LIMS3.csv\")\n",
+        "LIMS4 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\LIMS Actuals\\LIMS4.csv\")\n",
+        "\n",
+        "\n",
+        "rC4f_DeltaV = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\rC4f_DeltaV.csv\")\n",
         "\n",
         "# ABB1_3, #ABB1_5, #ABB5, #ABB11, ABB2_3 ,#ABB22, ABB33, ABB44, ABB56,  rC4f_ABB, LIMS1\n",
-        "# ABB1_3 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\ABB1_3.csv\")\n",
-        "# ABB1_5 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\ABB1_5.csv\")\n",
-        "# ABB2_3 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\ABB2_3.csv\")\n",
-        "# ABB5 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\ABB5.csv\")\n",
-        "# ABB11 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\ABB11.csv\")\n",
-        "# ABB22 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\ABB22.csv\")\n",
-        "# ABB33 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\ABB33.csv\")\n",
-        "# ABB44 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\ABB44.csv\")\n",
-        "# ABB56 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\ABB56.csv\")\n",
-        "# DeltaV3 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\DeltaV - XV90911 - HS52551.csv\")\n",
-        "# LIMS1 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\LIMS1.csv\")\n",
-        "# rC4f_ABB = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\rC4f_ABB.csv\")\n"
+        "# ABB1_3 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\ABB1_3.csv\")\n",
+        "# ABB1_5 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\ABB1_5.csv\")\n",
+        "# ABB2_3 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\ABB2_3.csv\")\n",
+        "# ABB5 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\ABB5.csv\")\n",
+        "# ABB11 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\ABB11.csv\")\n",
+        "# ABB22 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\ABB22.csv\")\n",
+        "# ABB33 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\ABB33.csv\")\n",
+        "# ABB44 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\ABB44.csv\")\n",
+        "# ABB56 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\ABB56.csv\")\n",
+        "# DeltaV3 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\DeltaV - XV90911 - HS52551.csv\")\n",
+        "# LIMS1 = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\LIMS1.csv\")\n",
+        "# rC4f_ABB = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\rC4f_ABB.csv\")\n"
       ]
     },
     {
@@ -3056,7 +3056,7 @@
         "# df_CD.to_csv(r'C:\\Users\\steve\\OneDrive\\1. BAIUTEK\\Project-OptiC4\\1 Preprocess\\Continuous Data\\contData_all.csv', index=False)\n",
         "\n",
         "# Board workstation local copy\n",
-        "df_CD.to_csv(r'C:\\Users\\austinsh\\Project-OptiC4\\1 Preprocess\\Continuous Data\\contData_all.csv', index=False)\n"
+        "df_CD.to_csv(r'C:\\Users\\austinsh\\Project-OptiC4\\II Data\\2 Preprocessing\\Continuous Data\\contData_all.csv', index=False)\n"
       ]
     },
     {
@@ -3815,6 +3815,29 @@
         "57 Features remain\n",
         "\n",
         "Outliers are to be addressed next"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 44,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2024-03-03 23:21:22.532332\n"
+          ]
+        }
+      ],
+      "source": [
+        "from datetime import datetime\n",
+        "\n",
+        "# Get the current date and time\n",
+        "current_date_time = datetime.now()\n",
+        "\n",
+        "# Print the current date and time\n",
+        "print(current_date_time)\n"
       ]
     }
   ],
