--- a/II Data/2 Preprocessing/Continuous Data/1.1.0 - RangeLimits.ipynb
+++ b/II Data/2 Preprocessing/Continuous Data/1.1.0 - RangeLimits.ipynb
@@ -47,7 +47,7 @@
         "\n",
         "df_adjust_Limits = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\1 Preprocess\\Continuous Data\\contData_all.csv\")\n",
         "\n",
-        "df_adjustments = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\CSV\\PVs\\adjust_limits.csv\")\n"
+        "df_adjustments = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\PVs\\adjust_limits.csv\")\n"
       ]
     },
     {
