--- a/II Data/2 Preprocessing/Merge Data/1.1.0 Iterative Merger.ipynb
+++ b/II Data/2 Preprocessing/Merge Data/1.1.0 Iterative Merger.ipynb
@@ -24,7 +24,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_10836\\3666630488.py:1: DeprecationWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_29252\\3666630488.py:1: DeprecationWarning: \n",
             "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
             "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
             "but was not found to be installed on your system.\n",
@@ -432,7 +432,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_10836\\736028239.py:77: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_29252\\736028239.py:77: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
             "  results = pd.concat([results, iteration_results_df], ignore_index=True)\n"
           ]
         },
@@ -1495,7 +1495,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1523,7 +1523,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1537,10 +1537,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2024-03-09 20:23:39.292360\n"
+          ]
+        }
+      ],
+      "source": [
+        "from datetime import datetime\n",
+        "\n",
+        "# Get the current date and time\n",
+        "current_date_time = datetime.now()\n",
+        "\n",
+        "# Print the current date and time\n",
+        "print(current_date_time)\n"
+      ]
     }
   ],
   "metadata": {
