Preparing analysis of C4 in C10 for all 3 datasets fomed in preprocessing

--- a/II Data/3 Exploratory Analysis/EDA/2.0.2 - EDA - Evidence to Study before outliers.ipynb
+++ b/II Data/3 Exploratory Analysis/EDA/2.0.2 - EDA - Evidence to Study before outliers.ipynb
@@ -39,7 +39,7 @@
         "\n",
         "# df_C10inC4dist = pd.read_csv(r\"C:\\Users\\saust\\OneDrive\\Desktop\\CodeSpace DLs\\Project rC4\\Jupyter Notebooks\\0 - Current\\2 EDA\\outlierHandling.csv\")\n",
         "\n",
-        "df_C10inC4dist = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\2 Preprocessing\\Merge Data\\merged_data.csv\")\n",
+        "df_C10inC4dist = pd.read_csv(r\"C:\\Users\\austinsh\\Project-OptiC4\\II Data\\2 Preprocessing\\Continuous Data\\contData_all.csv\")\n",
         "# Print descriptive statistics for df_C10inC4dist\n",
         "df_C10inC4dist.describe()"
       ]
