Apply endnote dates - Test code trhough to the feature selection averaging program

--- a/III Models/3 Model C4/3 Feature Selection/1.0.2 SFS_contData.ipynb
+++ b/III Models/3 Model C4/3 Feature Selection/1.0.2 SFS_contData.ipynb
@@ -2213,6 +2213,29 @@
         "r_squared_test = final_model.score(X_test[selected_features], y_test)\n",
         "print(f\"R-squared on Test Set: {r_squared_test}\")\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2024-03-19 19:59:03.576395\n"
+          ]
+        }
+      ],
+      "source": [
+        "from datetime import datetime\n",
+        "\n",
+        "# Get the current date and time\n",
+        "current_date_time = datetime.now()\n",
+        "\n",
+        "# Print the current date and time\n",
+        "print(current_date_time)\n"
+      ]
     }
   ],
   "metadata": {
