--- a/III Models/3 Model C4/3 Feature Selection/2.0.3 GAM_contData.ipynb
+++ b/III Models/3 Model C4/3 Feature Selection/2.0.3 GAM_contData.ipynb
@@ -297,6 +297,21 @@
         "# Evaluate the model\n",
         "print(gam.summary())\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from datetime import datetime\n",
+        "\n",
+        "# Get the current date and time\n",
+        "current_date_time = datetime.now()\n",
+        "\n",
+        "# Print the current date and time\n",
+        "print(current_date_time)\n"
+      ]
     }
   ],
   "metadata": {
