--- a/III Models/3 Model C4/3 Feature Selection/1.0.4 XGB_contData_iter.ipynb
+++ b/III Models/3 Model C4/3 Feature Selection/1.0.4 XGB_contData_iter.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 5,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -40,58 +40,62 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "   425_pct_Al  M_Value  C4_pct_Eth  C4_pct_H2O  C4_pct_Hex  \\\n",
-            "0    6.307630  3.50893    2.508420    21.96340    0.659256   \n",
-            "1    6.308335  3.50863    2.511135    21.96865    0.659930   \n",
-            "2    6.309390  3.50818    2.515210    21.97655    0.660942   \n",
-            "3    6.310090  3.50788    2.517925    21.98185    0.661616   \n",
-            "4    6.310790  3.50758    2.520640    21.98715    0.662291   \n",
+            "                  Date  425_pct_Al     Al2O3  M_Value  C4_pct_Eth  C4_pct_H2O  \\\n",
+            "0  2012-05-17 09:00:00    6.319560  11.41670  3.50773    2.554580     22.0531   \n",
+            "1  2012-05-17 10:00:00    6.319915  11.40835  3.50797    2.555935     22.0557   \n",
+            "2  2012-05-17 12:00:00    6.320970  11.39165  3.50869    2.560005     22.0636   \n",
+            "3  2012-05-18 08:00:00    6.328690  11.39165  3.51401    2.540370     22.0604   \n",
+            "4  2012-05-18 09:00:00    6.336060  11.40500  3.51910    2.514430     22.0484   \n",
             "\n",
-            "   HydWtr_pct_Ammonia  HydWtr_Na2O   DI55152   FC55003       FC55552  \\\n",
-            "0            0.908765     2.712180  0.925255  4919.290  41564.100000   \n",
-            "1            0.907643     2.805415  0.924281  5039.445  41558.250000   \n",
-            "2            0.905959     2.945270  0.923773  5268.620  41524.066667   \n",
-            "3            0.904837     3.038505  0.924103  5349.320  41500.275000   \n",
-            "4            0.903715     3.131740  0.924258  5563.165  41466.625000   \n",
+            "   HydWtr_pct_Ammonia  C4_pct_Hex  HydWtr_Na2O  Butanol  ...    LC90366  \\\n",
+            "0            0.867508    0.670721     3.354160  30.3662  ...  15.449150   \n",
+            "1            0.864729    0.671059     3.306475  30.3662  ...  15.449150   \n",
+            "2            0.856391    0.672071     3.163420  30.6785  ...  15.449150   \n",
+            "3            0.811652    0.674174     2.238130  32.6454  ...   8.759814   \n",
+            "4            0.773793    0.675408     1.391475  32.6454  ...   8.759814   \n",
             "\n",
-            "       FC55569  FFC55553  FFC55555    LC55555   PI55004   TC55552     TC55555  \\\n",
-            "0  6918.110000  0.996975  0.751501  59.968800  1.306310  177.1880  180.125000   \n",
-            "1  6919.960000  0.998847  0.750588  59.932300  1.181220  177.2505  180.053000   \n",
-            "2  6916.486667  0.998648  0.750505  60.002433  1.216603  177.4170  180.001667   \n",
-            "3  6918.470000  1.000349  0.750325  60.015925  1.206718  177.4590  180.010750   \n",
-            "4  6915.790000  1.000862  0.750021  60.020500  1.163892  177.5490  179.939500   \n",
+            "    LC90368   PI55004   PI55020   TC55552   TC55553   TC55555   TI40050  \\\n",
+            "0  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940  82.96565   \n",
+            "1  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940  82.96565   \n",
+            "2  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940  82.96565   \n",
+            "3  48.51306  1.190342 -0.318266  180.7166  201.0680  179.9338  82.41662   \n",
+            "4  48.51306  1.190342 -0.318266  180.7166  201.0680  179.9338  82.41662   \n",
             "\n",
-            "      TI55021    Butanol  \n",
-            "0  212.861000  54.858300  \n",
-            "1  212.699000  51.190050  \n",
-            "2  212.822333  48.744567  \n",
-            "3  212.799750  46.604750  \n",
-            "4  212.853000  44.587220  \n"
+            "    TI55021   TI55023  \n",
+            "0  213.8740  212.3085  \n",
+            "1  213.8740  212.3085  \n",
+            "2  213.8740  212.3085  \n",
+            "3  214.5402  212.9866  \n",
+            "4  214.5402  212.9866  \n",
+            "\n",
+            "[5 rows x 33 columns]\n"
           ]
         }
       ],
       "source": [
         "\n",
-        "df_TagDesc = pd.read_csv(r'C:\\Users\\saust\\OneDrive\\Desktop\\GitRepo\\Project-OptiC4\\CSV\\Not for Processing\\TagDesc.csv')\n",
+        "df_TagDesc = pd.read_csv(r'C:\\Users\\austinsh\\Project-OptiC4\\II Data\\1 Collection\\CSV\\Not for Processing\\TagDesc.csv')\n",
         "\n",
-        "df_All_1 = pd.read_csv(r'C:\\Users\\saust\\OneDrive\\Desktop\\GitRepo\\Project-OptiC4\\1 Preprocess\\Merge Data\\contData_all_Avg_1o2.csv')\n",
-        "df_All_2 = pd.read_csv(r'C:\\Users\\saust\\OneDrive\\Desktop\\GitRepo\\Project-OptiC4\\1 Preprocess\\Merge Data\\contData_all_Avg_2o2.csv')\n",
-        "# Concatenate (union) the dataframes\n",
-        "df_All = pd.concat([df_All_1, df_All_2], ignore_index=True)\n",
+        "# df_All_1 = pd.read_csv(r'C:\\Users\\saust\\OneDrive\\Desktop\\GitRepo\\Project-OptiC4\\1 Preprocess\\Merge Data\\contData_all_Avg_1o2.csv')\n",
+        "# df_All_2 = pd.read_csv(r'C:\\Users\\saust\\OneDrive\\Desktop\\GitRepo\\Project-OptiC4\\1 Preprocess\\Merge Data\\contData_all_Avg_2o2.csv')\n",
+        "# # Concatenate (union) the dataframes\n",
+        "# df_All = pd.concat([df_All_1, df_All_2], ignore_index=True)\n",
+        "\n",
+        "df_All = pd.read_csv(r'C:\\Users\\austinsh\\Project-OptiC4\\III Models\\3 Model C4\\3 Feature Selection\\filtered-out_5-9_corr.csv')\n",
         "\n",
         "print(df_All.head())"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 7,
       "metadata": {
         "trusted": true
       },
@@ -103,7 +107,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -112,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -143,20 +147,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "Index(['425_pct_Al', 'M_Value', 'C4_pct_Eth', 'C4_pct_H2O', 'C4_pct_Hex',\n",
-              "       'HydWtr_pct_Ammonia', 'HydWtr_Na2O', 'DI55152', 'FC55003', 'FC55552',\n",
-              "       'FC55569', 'FFC55553', 'FFC55555', 'LC55555', 'PI55004', 'TC55552',\n",
-              "       'TC55555', 'TI55021', 'Butanol'],\n",
+              "Index(['Date', '425_pct_Al', 'Al2O3', 'M_Value', 'C4_pct_Eth', 'C4_pct_H2O',\n",
+              "       'HydWtr_pct_Ammonia', 'C4_pct_Hex', 'HydWtr_Na2O', 'Butanol', 'DI55102',\n",
+              "       'DI55152', 'DI55580', 'FC55003', 'FC55552', 'FC55569', 'FC55576',\n",
+              "       'FFC55553', 'FFC55555', 'LC52572', 'LC55553', 'LC55557', 'LC55568',\n",
+              "       'LC90366', 'LC90368', 'PI55004', 'PI55020', 'TC55552', 'TC55553',\n",
+              "       'TC55555', 'TI40050', 'TI55021', 'TI55023'],\n",
               "      dtype='object')"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -167,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -179,13 +185,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
         "def iterate_feature_rotations(df_all, target_column, test_size=0.2, random_state=42, num_random_iterations=30):\n",
         "    results = []\n",
-        "    columns = [col for col in df_all.columns if col != target_column]\n",
+        "    columns = [col for col in df_all.columns if col != target_column and col != 'Date']\n",
         "    random.seed(random_state)  # for reproducibility\n",
         "\n",
         "    for feature in columns:\n",
@@ -234,40 +240,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "                                       Feature Rotation             Feature  \\\n",
-            "0     [425_pct_Al, FC55003, FFC55553, HydWtr_Na2O, D...          425_pct_Al   \n",
-            "1     [425_pct_Al, FC55003, FFC55553, HydWtr_Na2O, D...             FC55003   \n",
-            "2     [425_pct_Al, FC55003, FFC55553, HydWtr_Na2O, D...            FFC55553   \n",
-            "3     [425_pct_Al, FC55003, FFC55553, HydWtr_Na2O, D...         HydWtr_Na2O   \n",
-            "4     [425_pct_Al, FC55003, FFC55553, HydWtr_Na2O, D...             DI55152   \n",
-            "...                                                 ...                 ...   \n",
-            "9715  [TI55021, C4_pct_Eth, TC55555, LC55555, FFC555...             FC55552   \n",
-            "9716  [TI55021, C4_pct_Eth, TC55555, LC55555, FFC555...          C4_pct_Hex   \n",
-            "9717  [TI55021, C4_pct_Eth, TC55555, LC55555, FFC555...  HydWtr_pct_Ammonia   \n",
-            "9718  [TI55021, C4_pct_Eth, TC55555, LC55555, FFC555...             FC55003   \n",
-            "9719  [TI55021, C4_pct_Eth, TC55555, LC55555, FFC555...             PI55004   \n",
+            "                                        Feature Rotation     Feature  \\\n",
+            "0      [425_pct_Al, LC55568, FFC55553, FC55003, TC555...  425_pct_Al   \n",
+            "1      [425_pct_Al, LC55568, FFC55553, FC55003, TC555...     LC55568   \n",
+            "2      [425_pct_Al, LC55568, FFC55553, FC55003, TC555...    FFC55553   \n",
+            "3      [425_pct_Al, LC55568, FFC55553, FC55003, TC555...     FC55003   \n",
+            "4      [425_pct_Al, LC55568, FFC55553, FC55003, TC555...     TC55555   \n",
+            "...                                                  ...         ...   \n",
+            "28825  [TI55023, TI40050, DI55102, DI55152, TC55553, ...     LC90366   \n",
+            "28826  [TI55023, TI40050, DI55102, DI55152, TC55553, ...     FC55576   \n",
+            "28827  [TI55023, TI40050, DI55102, DI55152, TC55553, ...     TC55552   \n",
+            "28828  [TI55023, TI40050, DI55102, DI55152, TC55553, ...     FC55552   \n",
+            "28829  [TI55023, TI40050, DI55102, DI55152, TC55553, ...  425_pct_Al   \n",
             "\n",
-            "      Importance  \n",
-            "0          540.0  \n",
-            "1          314.0  \n",
-            "2          324.0  \n",
-            "3          351.0  \n",
-            "4          356.0  \n",
-            "...          ...  \n",
-            "9715       233.0  \n",
-            "9716       299.0  \n",
-            "9717       278.0  \n",
-            "9718       178.0  \n",
-            "9719       211.0  \n",
+            "       Importance  \n",
+            "0           493.0  \n",
+            "1           222.0  \n",
+            "2           237.0  \n",
+            "3           218.0  \n",
+            "4           170.0  \n",
+            "...           ...  \n",
+            "28825       153.0  \n",
+            "28826       155.0  \n",
+            "28827       172.0  \n",
+            "28828       158.0  \n",
+            "28829       154.0  \n",
             "\n",
-            "[9720 rows x 3 columns]\n"
+            "[28830 rows x 3 columns]\n"
           ]
         }
       ],
@@ -277,7 +283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -301,39 +307,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "               Feature  Average Importance               Description\n",
-            "0              DI55152          357.903704    2ND STG SEPR TO FA-560\n",
-            "1           C4_pct_Eth          355.972222                       NaN\n",
-            "2              M_Value          355.887037                       NaN\n",
-            "3           C4_pct_H2O          353.446296                       NaN\n",
-            "4           C4_pct_Hex          340.746296                       NaN\n",
-            "5          HydWtr_Na2O          334.937037                       NaN\n",
-            "6   HydWtr_pct_Ammonia          330.053704                       NaN\n",
-            "7           425_pct_Al          329.918519                       NaN\n",
-            "8              FC55569          312.129630    30# STM TO C4 STRIPPER\n",
-            "9              TC55552          311.709259  DC-551 ALKOX  FD PREHEAT\n",
-            "10            FFC55553          281.283333  DC551 H2O/ALKOXIDE RATIO\n",
-            "11             LC55555          274.348148   FA-552 1ST STG SEP SLRY\n",
-            "12             FC55552          266.561111  ALK FD TO HYDR RX DC-551\n",
-            "13             PI55004          259.757407    DA-554 BOTTOM PRESSURE\n",
-            "14            FFC55555          258.451852  RECYC BUT/ALKOX FD RATIO\n",
-            "15             FC55003          222.305556  DA-551 O/H H2O TO DC-551\n",
-            "16             TC55555          215.409259       EA-552 OUT  RECY C4\n",
-            "17             TI55021          193.179630            STEAM TO DA554\n"
+            "               Feature  Average Importance                Description\n",
+            "0   HydWtr_pct_Ammonia          227.722581                        NaN\n",
+            "1          HydWtr_Na2O          212.411828                        NaN\n",
+            "2              TC55552          207.874194   DC-551 ALKOX  FD PREHEAT\n",
+            "3              FC55569          197.351613     30# STM TO C4 STRIPPER\n",
+            "4           C4_pct_H2O          196.354839                        NaN\n",
+            "5           425_pct_Al          192.492473                        NaN\n",
+            "6              FC55003          191.511828   DA-551 O/H H2O TO DC-551\n",
+            "7              LC90368          187.060215       FB-658 ALKOXIDE TANK\n",
+            "8           C4_pct_Hex          186.644086                        NaN\n",
+            "9              FC55552          185.907527   ALK FD TO HYDR RX DC-551\n",
+            "10          C4_pct_Eth          185.891398                        NaN\n",
+            "11            FFC55553          182.823656   DC551 H2O/ALKOXIDE RATIO\n",
+            "12             LC55557          182.505376        FA-554 SLURRY LEVEL\n",
+            "13             FC55576          181.621505   CONDENSATE TO DESUPERHTR\n",
+            "14             DI55102          181.230108           HYDROL RX OUTLET\n",
+            "15             M_Value          180.132258                        NaN\n",
+            "16             LC90366          172.938710         FB-657 SAO STORAGE\n",
+            "17             LC52572          171.348387   FB-554 SLURRY SURGE TANK\n",
+            "18             DI55152          170.191398     2ND STG SEPR TO FA-560\n",
+            "19             DI55580          160.326882   DA-554 BTMS SLURRY TO EX\n",
+            "20               Al2O3          157.970968                        NaN\n",
+            "21            FFC55555          154.272043   RECYC BUT/ALKOX FD RATIO\n",
+            "22             TC55555          152.260215        EA-552 OUT  RECY C4\n",
+            "23             PI55020          151.460215        DA-554 TOP PRESSURE\n",
+            "24             TC55553          148.665591    DC-551 HYDR H2O PREHEAT\n",
+            "25             TI55021          147.448387             STEAM TO DA554\n",
+            "26             LC55553          147.170968   DC551 HYDR RX SLURRY LEV\n",
+            "27             LC55568          146.126882    DA-554 C4 STRPR BOTTOMS\n",
+            "28             TI40050          141.439785  CLARK AIR COMP INLET TEMP\n",
+            "29             TI55023          108.291398                        NaN\n",
+            "30             PI55004          100.552688     DA-554 BOTTOM PRESSURE\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\saust\\AppData\\Local\\Temp\\ipykernel_87464\\3091506829.py:9: SettingWithCopyWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_19100\\3091506829.py:9: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -357,6 +376,29 @@
         "# Or save it to a CSV file\n",
         "# final_df.to_csv('average_feature_importances_with_descriptions.csv', index=False)\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2024-03-19 19:58:48.507877\n"
+          ]
+        }
+      ],
+      "source": [
+        "from datetime import datetime\n",
+        "\n",
+        "# Get the current date and time\n",
+        "current_date_time = datetime.now()\n",
+        "\n",
+        "# Print the current date and time\n",
+        "print(current_date_time)\n"
+      ]
     }
   ],
   "metadata": {
@@ -375,7 +417,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.9"
+      "version": "3.12.1"
     }
   },
   "nbformat": 4,
