--- a/III Models/3 Model C4/3 Feature Selection/1.0.5 XGB_contData_iter_reducedlist.ipynb
+++ b/III Models/3 Model C4/3 Feature Selection/1.0.5 XGB_contData_iter_reducedlist.ipynb
@@ -384,6 +384,21 @@
         "# Or save it to a CSV file\n",
         "# final_df.to_csv('average_feature_importances_with_descriptions.csv', index=False)\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from datetime import datetime\n",
+        "\n",
+        "# Get the current date and time\n",
+        "current_date_time = datetime.now()\n",
+        "\n",
+        "# Print the current date and time\n",
+        "print(current_date_time)\n"
+      ]
     }
   ],
   "metadata": {
