Began updating model slection programs -Started taking notes of what the program should be producing -Updated source file for most -Ran all up to the XGB - Drop 1 --Next Analyze if any features should be dropped from performance improvement over benchmark.

--- a/III Models/3 Model C4/3 Feature Selection/2.0.3 GAM_contData.ipynb
+++ b/III Models/3 Model C4/3 Feature Selection/2.0.3 GAM_contData.ipynb
@@ -4,108 +4,10 @@
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Collecting pygam\n",
-            "  Obtaining dependency information for pygam from https://files.pythonhosted.org/packages/ea/a7/d7037173f7c39fd114ca7bc9757149bdfbe2951b5c2cba08038c24e55e10/pygam-0.9.1-py3-none-any.whl.metadata\n",
-            "  Downloading pygam-0.9.1-py3-none-any.whl.metadata (7.1 kB)\n",
-            "Requirement already satisfied: numpy>=1.25 in c:\\users\\austinsh\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pygam) (1.26.4)\n",
-            "Collecting progressbar2<5.0.0,>=4.2.0 (from pygam)\n",
-            "  Obtaining dependency information for progressbar2<5.0.0,>=4.2.0 from https://files.pythonhosted.org/packages/e6/7c/7da9fefe4429f21e16fb9ab95c05f47cd11ffa4fd79932b639a1380a52a3/progressbar2-4.4.2-py3-none-any.whl.metadata\n",
-            "  Downloading progressbar2-4.4.2-py3-none-any.whl.metadata (17 kB)\n",
-            "Collecting scipy<1.12,>=1.11.1 (from pygam)\n",
-            "  Obtaining dependency information for scipy<1.12,>=1.11.1 from https://files.pythonhosted.org/packages/c6/a1/357e4cd43af2748e1e0407ae0e9a5ea8aaaa6b702833c81be11670dcbad8/scipy-1.11.4-cp312-cp312-win_amd64.whl.metadata\n",
-            "  Downloading scipy-1.11.4-cp312-cp312-win_amd64.whl.metadata (60 kB)\n",
-            "     ---------------------------------------- 0.0/60.4 kB ? eta -:--:--\n",
-            "     ------ --------------------------------- 10.2/60.4 kB ? eta -:--:--\n",
-            "     -------------------------------------- 60.4/60.4 kB 809.0 kB/s eta 0:00:00\n",
-            "Collecting python-utils>=3.8.1 (from progressbar2<5.0.0,>=4.2.0->pygam)\n",
-            "  Obtaining dependency information for python-utils>=3.8.1 from https://files.pythonhosted.org/packages/26/45/98431ba6d17b99468bd3f4c53fdeefff402167f006a06773905296f6d489/python_utils-3.8.2-py2.py3-none-any.whl.metadata\n",
-            "  Downloading python_utils-3.8.2-py2.py3-none-any.whl.metadata (9.7 kB)\n",
-            "Collecting typing-extensions>3.10.0.2 (from python-utils>=3.8.1->progressbar2<5.0.0,>=4.2.0->pygam)\n",
-            "  Obtaining dependency information for typing-extensions>3.10.0.2 from https://files.pythonhosted.org/packages/f9/de/dc04a3ea60b22624b51c703a84bbe0184abcd1d0b9bc8074b5d6b7ab90bb/typing_extensions-4.10.0-py3-none-any.whl.metadata\n",
-            "  Downloading typing_extensions-4.10.0-py3-none-any.whl.metadata (3.0 kB)\n",
-            "Downloading pygam-0.9.1-py3-none-any.whl (522 kB)\n",
-            "   ---------------------------------------- 0.0/522.0 kB ? eta -:--:--\n",
-            "   --------- ------------------------------ 122.9/522.0 kB 3.6 MB/s eta 0:00:01\n",
-            "   ------------------------------ --------- 399.4/522.0 kB 5.0 MB/s eta 0:00:01\n",
-            "   ---------------------------------------- 522.0/522.0 kB 4.7 MB/s eta 0:00:00\n",
-            "Downloading progressbar2-4.4.2-py3-none-any.whl (56 kB)\n",
-            "   ---------------------------------------- 0.0/56.8 kB ? eta -:--:--\n",
-            "   ---------------------------------------- 56.8/56.8 kB ? eta 0:00:00\n",
-            "Downloading scipy-1.11.4-cp312-cp312-win_amd64.whl (43.7 MB)\n",
-            "   ---------------------------------------- 0.0/43.7 MB ? eta -:--:--\n",
-            "    --------------------------------------- 0.8/43.7 MB 25.3 MB/s eta 0:00:02\n",
-            "   -- ------------------------------------- 3.2/43.7 MB 34.2 MB/s eta 0:00:02\n",
-            "   --- ------------------------------------ 3.9/43.7 MB 31.4 MB/s eta 0:00:02\n",
-            "   ---- ----------------------------------- 5.4/43.7 MB 34.2 MB/s eta 0:00:02\n",
-            "   ----- ---------------------------------- 5.9/43.7 MB 31.4 MB/s eta 0:00:02\n",
-            "   ------- -------------------------------- 8.4/43.7 MB 31.5 MB/s eta 0:00:02\n",
-            "   --------- ------------------------------ 10.8/43.7 MB 38.6 MB/s eta 0:00:01\n",
-            "   ------------- -------------------------- 14.8/43.7 MB 46.9 MB/s eta 0:00:01\n",
-            "   --------------- ------------------------ 16.9/43.7 MB 54.7 MB/s eta 0:00:01\n",
-            "   ----------------- ---------------------- 19.0/43.7 MB 54.7 MB/s eta 0:00:01\n",
-            "   ------------------- -------------------- 21.0/43.7 MB 43.5 MB/s eta 0:00:01\n",
-            "   -------------------- ------------------- 22.5/43.7 MB 46.7 MB/s eta 0:00:01\n",
-            "   --------------------- ------------------ 23.6/43.7 MB 38.5 MB/s eta 0:00:01\n",
-            "   ----------------------- ---------------- 25.2/43.7 MB 36.3 MB/s eta 0:00:01\n",
-            "   ------------------------ --------------- 26.6/43.7 MB 34.4 MB/s eta 0:00:01\n",
-            "   ------------------------- -------------- 28.2/43.7 MB 32.8 MB/s eta 0:00:01\n",
-            "   --------------------------- ------------ 29.7/43.7 MB 32.7 MB/s eta 0:00:01\n",
-            "   ---------------------------- ----------- 31.4/43.7 MB 31.2 MB/s eta 0:00:01\n",
-            "   ------------------------------ --------- 33.1/43.7 MB 31.2 MB/s eta 0:00:01\n",
-            "   ------------------------------- -------- 34.3/43.7 MB 29.7 MB/s eta 0:00:01\n",
-            "   -------------------------------- ------- 35.4/43.7 MB 29.8 MB/s eta 0:00:01\n",
-            "   --------------------------------- ------ 36.5/43.7 MB 28.5 MB/s eta 0:00:01\n",
-            "   ---------------------------------- ----- 37.4/43.7 MB 29.7 MB/s eta 0:00:01\n",
-            "   ----------------------------------- ---- 38.6/43.7 MB 27.3 MB/s eta 0:00:01\n",
-            "   ------------------------------------ --- 39.7/43.7 MB 26.2 MB/s eta 0:00:01\n",
-            "   ------------------------------------- -- 40.9/43.7 MB 25.2 MB/s eta 0:00:01\n",
-            "   -------------------------------------- - 41.9/43.7 MB 23.4 MB/s eta 0:00:01\n",
-            "   ---------------------------------------  43.1/43.7 MB 24.2 MB/s eta 0:00:01\n",
-            "   ---------------------------------------  43.7/43.7 MB 23.4 MB/s eta 0:00:01\n",
-            "   ---------------------------------------  43.7/43.7 MB 23.4 MB/s eta 0:00:01\n",
-            "   ---------------------------------------  43.7/43.7 MB 23.4 MB/s eta 0:00:01\n",
-            "   ---------------------------------------- 43.7/43.7 MB 17.7 MB/s eta 0:00:00\n",
-            "Downloading python_utils-3.8.2-py2.py3-none-any.whl (27 kB)\n",
-            "Downloading typing_extensions-4.10.0-py3-none-any.whl (33 kB)\n",
-            "Installing collected packages: typing-extensions, scipy, python-utils, progressbar2, pygam\n",
-            "Successfully installed progressbar2-4.4.2 pygam-0.9.1 python-utils-3.8.2 scipy-1.11.4 typing-extensions-4.10.0\n",
-            "Note: you may need to restart the kernel to use updated packages.\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "[notice] A new release of pip is available: 23.2.1 -> 24.0\n",
-            "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Note: you may need to restart the kernel to use updated packages.\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "[notice] A new release of pip is available: 23.2.1 -> 24.0\n",
-            "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "%pip install pygam --user\n",
-        "%pip install FuzzyTM>=0.4.0 --user\n"
+        "# %pip install pygam --user\n",
+        "# %pip install FuzzyTM>=0.4.0 --user\n"
       ]
     },
     {
